--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 
 {
   "name": "Nutrition Tracker",
-  "short_name": "NutriTrack",
+  "short_name": "NutriHive",
   "description": "AI-powered nutrition tracking and meal planning app",
   "theme_color": "#0ea5e9",
   "background_color": "#ffffff",
